# lop-backend

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/schemas/: Asset.py  account.py  investment.py  shared.py
tests/: test_schemas.py  test_types.py
