[project]
name = "lop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.3",
    "ruff>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.2",
]
